--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -1,3 +1,138 @@
 <section class="about-me" id="about-me">
   <div class="container"></div>
 </section>
+<section class="about-me" id="about-me">
+  <div class="container about-me-container">
+    <div class="about-me-intro">
+      <div class="about-me-activity">
+        <h2 class="second-title visually-hidden">About Me</h2>
+        <p class="about-me-text">
+          I work with people all over the world to create impressive and
+          <span class="about-me-span-red">functional</span
+          ><span class="about-me-span-gray"> websites</span> that reflect each
+          client's unique personality.
+        </p>
+      </div>
+      <figure class="about-me-thumb">
+        <picture>
+          <source
+            srcset="/img/aboutMe-desk.jpg 1x, /img/aboutMe-desk-2x.jpg 2x"
+            media="(min-width: 1440px)"
+          />
+          <source
+            srcset="/img/aboutMe-tab.jpg 1x, /img/aboutMe-tab-2x.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="/img/aboutMe-mob.jpg 1x, /img/aboutMe-mob-2x.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img src="/img/aboutMe-desk.jpg" alt="man-in-glasses-with-laptop" />
+        </picture>
+      </figure>
+    </div>
+    <div class="about-me-accordion-part">
+      <ul class="about-me-list">
+        <li class="ac-about-me-item">
+          <h3 class="about-me-ac-header">
+            About me
+            <button class="about-me-ac-btn open" type="button">
+              <svg class="icon-arrow-down" width="20" height="20">
+                <use href="../img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </h3>
+          <ul class="about-me-ac-panel open">
+            <li class="about-me-ac-text about-me-part">
+              I am Lloyd Jefferson, a talented programmer with extensive
+              expertise in software development. I have an understanding of
+              different programming languages and technologies, always ready to
+              improve my skills. I always follow the latest trends and look for
+              unconventional, creative solutions to problems. I have a high
+              level of analytical skills and am able to effectively solve even
+              the most difficult tasks encountered on the way.
+            </li>
+            <li class="about-me-ac-text">
+              Able to work both independently and in a team. I can effectively
+              cooperate with colleagues, exchanging ideas and finding optimal
+              solutions. Professional maturity allows you to calmly cope with
+              challenges and stressful situations, while maintaining a high
+              quality of work.I am always looking for opportunities for
+              self-improvement. I actively study new technologies and practices
+              to stay abreast of the latest innovations. I have a strong
+              understanding of various programming languages, frameworks and
+              architectural concepts that allow me to create efficient and
+              scalable software.
+            </li>
+          </ul>
+        </li>
+
+        <li class="ac-about-me-item">
+          <h3 class="about-me-ac-header">
+            Role
+            <button class="about-me-ac-btn" type="button">
+              <svg class="icon-arrow-down" width="20" height="20">
+                <use href="../img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </h3>
+
+          <ul class="about-me-ac-panel">
+            <li class="about-me-ac-text">Frontend development</li>
+            <li class="about-me-ac-text">HeadlessCMS, Wordpress</li>
+            <li class="about-me-ac-text">Blender(enjoy)</li>
+          </ul>
+        </li>
+
+        <li class="ac-about-me-item">
+          <h3 class="about-me-ac-header">
+            Education
+            <button class="about-me-ac-btn" type="button">
+              <svg class="icon-arrow-down" width="20" height="20">
+                <use href="../img/sprite.svg#icon-arrow-down"></use>
+              </svg>
+            </button>
+          </h3>
+
+          <ul class="about-me-ac-panel">
+            <li class="about-me-ac-text">
+              2018 - 2019 / Frontend Development Diploma, GoIT IT School, New
+              York
+            </li>
+            <li class="about-me-ac-text">
+              2019 - 2020 / Advanced Web Development Certificate, GoIT IT
+              School, New York
+            </li>
+            <li class="about-me-ac-text">
+              2020 - 2022 / Advanced Blender Animation Techniques, Udemy
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="skills-part">
+      <div class="skills-swiper swiper">
+        <ul class="skills-list swiper-wrapper">
+          <li class="skills-item swiper-slide">HTML/CSS</li>
+          <li class="skills-item swiper-slide">JavaScript</li>
+          <li class="skills-item swiper-slide">React</li>
+          <li class="skills-item swiper-slide">Node.js</li>
+          <li class="skills-item swiper-slide">React Native</li>
+          <li class="skills-item swiper-slide">Soft skills</li>
+          <li class="skills-item swiper-slide">HTML/CSS</li>
+          <li class="skills-item swiper-slide">JavaScript</li>
+          <li class="skills-item swiper-slide">React</li>
+          <li class="skills-item swiper-slide">Node.js</li>
+          <li class="skills-item swiper-slide">React Native</li>
+          <li class="skills-item swiper-slide">Soft skills</li>
+        </ul>
+      </div>
+      <button class="skills-btn-next swiper-button-next" type="button">
+        <svg class="icon-btn-arrow" width="28" height="28">
+          <use href="/img/sprite.svg#icon-arrow-narrow-right"></use>
+        </svg>
+      </button>
+    </div>
+  </div>
+  <script src="../js/about-me.js" type="module"></script>
+</section>
