--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -6,6 +6,7 @@
         srcset="./img/covers_1.jpg 1x, ./img/covers_1@2x.jpg 2x"
         alt="StarlightStudio"
         class="covers-image"
+        src="./img/covers_1.jpg"
       />
     </li>
     <li class="cover-item">
@@ -13,11 +14,13 @@
         srcset="./img/covers_2.jpg 1x, ./img/covers_2@2x.jpg 2x"
         alt="Energy.flow"
         class="covers-image"
+        src="./img/covers_2.jpg"
       />
       <img
         srcset="./img/covers_6.jpg 1x, ./img/covers_6@2x.jpg 2x"
         alt="Vichuvanka"
         class="covers-image"
+        src="./img/covers_6.jpg"
       />
     </li>
     <li class="cover-item">
@@ -25,16 +28,19 @@
         srcset="./img/covers_4.jpg 1x, ./img/covers_4@2x.jpg 2x"
         alt="Chego"
         class="covers-image"
+        src="./img/covers_4.jpg"
       />
       <img
         srcset="./img/covers_5.jpg 1x, ./img/covers_5@2x.jpg 2x"
         alt="Mimino"
         class="covers-image"
+        src="./img/covers_5.jpg"
       />
       <img
         srcset="./img/covers_3.jpg 1x, ./img/covers_3@2x.jpg 2x"
         alt="Fruitbox"
         class="covers-image"
+        src="./img/covers_3.jpg"
       />
     </li>
     <li class="cover-item">
@@ -42,16 +48,19 @@
         srcset="./img/covers_7.jpg 1x, ./img/covers_7@2x.jpg 2x"
         alt="Green"
         class="covers-image"
+        src="./img/covers_7.jpg"
       />
       <img
         srcset="./img/covers_8.jpg 1x, ./img/covers_8@2x.jpg 2x"
         alt="Power"
         class="covers-image"
+        src="./img/covers_8.jpg"
       />
       <img
         srcset="./img/covers_9.jpg 1x, ./img/covers_9@2x.jpg 2x"
         alt="Wallet"
         class="covers-image"
+        src="./img/covers_9.jpg"
       />
     </li>
     <li class="cover-item">
@@ -59,6 +68,7 @@
         srcset="./img/covers_10.jpg 1x, ./img/covers_10@2x.jpg 2x"
         alt="English"
         class="covers-image"
+        src="./img/covers_10.jpg"
       />
     </li>
   </ul>
