--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -38,7 +38,7 @@
             About me
             <button class="about-me-ac-btn open" type="button">
               <svg class="icon-arrow-down" width="20" height="20">
-                <use href="../img/sprite.svg#icon-arrow-down"></use>
+                <use href="/img/sprite.svg#icon-arrow-down"></use>
               </svg>
             </button>
           </h3>
@@ -72,7 +72,7 @@
             Role
             <button class="about-me-ac-btn" type="button">
               <svg class="icon-arrow-down" width="20" height="20">
-                <use href="../img/sprite.svg#icon-arrow-down"></use>
+                <use href="/img/sprite.svg#icon-arrow-down"></use>
               </svg>
             </button>
           </h3>
@@ -89,7 +89,7 @@
             Education
             <button class="about-me-ac-btn" type="button">
               <svg class="icon-arrow-down" width="20" height="20">
-                <use href="../img/sprite.svg#icon-arrow-down"></use>
+                <use href="/img/sprite.svg#icon-arrow-down"></use>
               </svg>
             </button>
           </h3>
