--- a/src/css/container.css
+++ b/src/css/container.css
@@ -10,11 +10,13 @@
   .container {
     max-width: 768px;
     padding: 0 32px;
+    width: 768px;
   }
 }
 /* Styles for Desktop devices */
 @media only screen and (min-width: 1440px) {
   .container {
     max-width: 1440px;
+    width: 1440px;
   }
 }
