add src to img on hero

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,6 +7,7 @@
         alt="Jefferson photologo"
         width="80"
         height="80"
+        src="/img/logo-foto-1x.png"
       />
       <p class="logo-name">jefferson*</p>
     </a>
