--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -49,7 +49,7 @@
   align-items: center;
   width: 37px;
   height: 37px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .email > a {
@@ -57,7 +57,7 @@
   border-radius: 60px;
   width: 178px;
   height: 37px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-item > a:hover {
