fix links on projects

--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -54,7 +54,7 @@
             </h3>
             <a
               class="project-link"
-              href="https://zhonik.github.io/project-JS-Geeks/"
+              href="https://github.com/zhonik/project-JS-Geeks"
               target="_blank"
               rel="noopener noreferrer"
               >See project</a
@@ -92,7 +92,7 @@
             </h3>
             <a
               class="project-link"
-              href="https://zhonik.github.io/project-JS-Geeks/"
+              href="https://github.com/zhonik/project-JS-Geeks"
               target="_blank"
               rel="noopener noreferrer"
               >See project</a
